Fix annoying sidebar flicker issue

--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -58,6 +58,13 @@ img, picture, video, canvas, svg {
     max-width: 100%;
 }
 
+/* Special state to apply before DOMContent is loaded to the sidebar */
+html.sidebar-collapsed-init .sidebar {
+    min-width: var(--sidebar-collapsed-width);
+    max-width: var(--sidebar-collapsed-width);
+    width: var(--sidebar-collapsed-width);
+}
+
 /* Remove animations for people who've turned them off */
 @media (prefers-reduced-motion: reduce) {
     *, *::before, *::after {
